--- a/일지.md
+++ b/일지.md
@@ -1,1 +1,18 @@
-# Study
+# HTML Study
+참고서적: 코딩 자율학습 HTML+CSS+자바스크립트
+
+2022.12.01 [Chapter 2.1~ 2.3]
+vscode 설치 이후 필요한 extension까지 설치하여 공부를 시작했다.
+vscode에 학습한 내용을 주석처리 하며 노트를 남겨 git에 올리려 하였으나
+git 활용이 어려워 유튜브 인터넷 등등 찾아가며 파일을 올리는데 성공했다.
+아직까지 git 사용이 어려워 좀 더 자주 사용해보며, 익숙하게 만들어야겠다.
+git 설정이 잘못되면서 저장된 파일이 날아가는 등, 여러 고비가 있었지만
+복구하면서 git 과 파일을 다시 살려 업로드에 성공했다.
+
+2022.12.02 [Chapter 3.1~3.5]
+본격적으로 태그공부에 시작했다. hn태그, p태그 등등 공부하며,
+오늘은 텍스트 강조까지 공부하였다.
+책에 있는 예제코드도 따라해보기도 하고, 여러가지 작성해보며 노트를 작성하였다.
+인라인 요소인 태그들은 br태그로 줄바꿈하여 보기 깔끔하게 하고,
+또한 각 태그 중간마다 점선을 그어 구분하였다.
+다음은 chapter 3.6~3.10까지 공부한 뒤, 테스트를 통해 직접 배운 내용을 상기하여 코드를 작성해보려한다.
