--- a/일지.md
+++ b/일지.md
@@ -54,3 +54,11 @@ form 형식을 좀 더 면밀히 공부하다보니, test에 있는 로그인창
 이를 통해 로그인창 만드는test를 좀 수정해야겠다는 생각이 들었다.
 다음은 css를 학습할 계획을 가지고 있다. 물론 처음 배우는 파트이다보니 기대반 걱정반이다.
 이를 통해 이쁜 웹 페이지를 만들어 보고 싶다.
+
+2022.12.09 [Chapter 6.01~ 6.04]
+
+css 속성에 대해 공부해 보았다. css 텍스트 색상 폰트 크기 글꼴 등 다양하게 사용해보았고,
+박스 모델 구성 속성도 다뤄 보았지만, 아직 박스 속성에 있는 margin, border,padding이 헷갈려 어려번 차이를 비교해보려한다.
+또한 배경속성도 이를통해 익히게 되었다. 박스모델 구성요소가 헷갈리다보니, 박스를 만들어도 의도와는 다르게 만들어지는 경우가 있다.
+그리고 배경속성이 나에게 있어 가장 어려운 파트였다. 반복 학습을 통해 익히고, 여러번 쳐보며 나의 것으로 만들어야겠다는 생각이 들었다.
+css를 마무리 하여 다음주에 저번에 한 html test에 css를 적용해 한층더 업그레이드할 계획이다.
