--- a/일지.md
+++ b/일지.md
@@ -62,3 +62,13 @@ css 속성에 대해 공부해 보았다. css 텍스트 색상 폰트 크기 글
 또한 배경속성도 이를통해 익히게 되었다. 박스모델 구성요소가 헷갈리다보니, 박스를 만들어도 의도와는 다르게 만들어지는 경우가 있다.
 그리고 배경속성이 나에게 있어 가장 어려운 파트였다. 반복 학습을 통해 익히고, 여러번 쳐보며 나의 것으로 만들어야겠다는 생각이 들었다.
 css를 마무리 하여 다음주에 저번에 한 html test에 css를 적용해 한층더 업그레이드할 계획이다.
+
+2022.12.10 [Chapter 6.05~ 6.09]
+
+css의 다양한 효과들에 대해 배우는 시간을 가졌다. 전환 효과, 변환 효과 위치 효과등 다양하게 배우게 되었다.
+책만 봤을때는 이게 도대체 무슨 소리인가 했는데, 유튜브를 통해 책과 함께 공부하며, 따라해보니 이해가 됐다.
+처음엔 html만 다루던 나였지만, 이제 점점 css를 공부하면서 웹 페이지의 뼈대인 html에 css를 적용하니
+변화하고 점차 구조화 되가는 웹페이지를 보는 재미도 있었다.
+하지만, 전환효과와 변환 효과는 공부하면서 어려움을 겪었지만, 재밌게 학습하였다.
+간혹 반대로 되는 경우도 있었고 오류도 뜨는경우가 있었다.
+자세히 살펴보면 나의 실수로 인해 안되는 경우가 많긴 했지만, 그래도 이러한 과정을 통해 점차점차 실수와 css 지식이 늘어나는거 같아 기분이 좋았다.
