--- a/일지.md
+++ b/일지.md
@@ -1,150 +1,1 @@
-# HTML Study
-참고서적: 코딩 자율학습 HTML+CSS+자바스크립트
-
-2022.12.01 [Chapter 2.01~ 2.03]
-
-vscode 설치 이후 필요한 extension까지 설치하여 공부를 시작했다.
-vscode에 학습한 내용을 주석처리 하며 노트를 남겨 git에 올리려 하였으나
-git 활용이 어려워 유튜브 인터넷 등등 찾아가며 파일을 올리는데 성공했다.
-아직까지 git 사용이 어려워 좀 더 자주 사용해보며, 익숙하게 만들어야겠다.
-git 설정이 잘못되면서 저장된 파일이 날아가는 등, 여러 고비가 있었지만
-복구하면서 git 과 파일을 다시 살려 업로드에 성공했다.
-
-2022.12.02 [Chapter 3.01~ 3.05]
-
-본격적으로 태그공부에 시작했다. hn태그, p태그 등등 공부하며,
-오늘은 텍스트 강조까지 공부하였다.
-책에 있는 예제코드도 따라해보기도 하고, 여러가지 작성해보며 노트를 작성하였다.
-인라인 요소인 태그들은 br태그로 줄바꿈하여 보기 깔끔하게 하고,
-또한 각 태그 중간마다 점선을 그어 구분하였다.
-다음은 chapter 3.6~ 3.10까지 공부한 뒤, 테스트를 통해 직접 배운 내용을 상기하여 코드를 작성해보려한다.
-
-2022.12.05 [Chapter 3.06~ 3.10]
-
-오늘로 참고서적에 있는 html 부분을 마무리 하였다.
-마지막 3.6~ 3.10장의 양이 방대하여, 정리하는데도 시간이 걸렸고, 또한 시간이 지나면 잊혀질 가능성이 높아
-자주 보며 익혀야할 것 같다.
-특히 표 만들기에서 헷갈린 th td를 조금더 복습해보고, 병합을 좀더 익혀야 할것 같다.
-다음은 css 도입이지만, 그전에 서적에 있는 테스트를 해보고 css를 진입해볼것이다.
-또한 github에는 새롭게 css-study repository를 만들어 올릴 계획이다.
-테스트의 내용은 포스트잇 UI, 로그인 화면, 위키백과 사이트의 목차 이렇게 3개로 진행되며,
-아직 css를 배우기 전이기에 html로 뼈대를 잡고 css를 다 배운 뒤 좀더 완성해 나갈 것이다.
-
-2022.12.06 [Chapter 4.01~ 4.02]
-
-참고 서적에 있는 test를 통해 배운 내용을 복습하고, 스스로 코딩을 해보았다. 쉽지는 않았지만, 최대한 기억해 작성해보았다 
-아직 부족한 부분이 있지만, 점차 수정및 보안해가며 완성해나갈 계획이다.
-3가지 test로 포스트잇 ui, 구글로그인창, 위키백과목록 이렇게 3가지 test를 진행해 완성했다.
-오늘부터 css공부를 시작하였다. html을 마무리하며, css를 배우면서 css문법이 보다 쉽다고 들었다. 하지만, 쉽다고 대충하지 않고 제대로 공부해볼 생각이다. 
-오늘은 css를 html에 적용하는 방법을 배웠다. 3가지 방법중 외부 연결방식을 통해 공부해 점점 더 완성도 있는 웹 페이지를 만들어 갈 것이다.
-
-2022.12.07 [Chapter 5.01~5.05]
-
-선택자에 관련된 속성에 대해 공부를 하였다. html의 태그 선택자를 지정하는 배워 다양한 선택자를 선택할 수 있게 되었다.
-하지만, 아직 헷갈리는 부분이 있다. 가상 클래스 선택자로 조금 더 키보드를 두둘겨 보며 선택자를 좀 더 깊게 공부를 해 봐야할것 같다.
-또한, 선택자에 따라 전체선택자, id선택자, class선택자 지정이 헷갈려 익숙해질 때까지 쳐봐야 할것 같다.
-이를 통해 얼른 test에 적용해 보며, 조금 더 완성도 있는 test를 구현해 보고 싶다.
-
-2022.12.08 [Chapter 3.01~ 3.10]
-
-오늘은 html을 복습하는 시간을 가졌다. 분명 배운 내용임에도 까먹는거 보면, 
-반복 학습을 통해 여러번 보며 학습해야하다는걸 느끼게 된 날이였다.
-특히 첫 학습때와 마찬가지로 표 만들기인 table 태그에서 여전히 어려움을 느꼈다.
-form 형식을 좀 더 면밀히 공부하다보니, test에 있는 로그인창 만드는것이 생각났다.
-이를 통해 로그인창 만드는test를 좀 수정해야겠다는 생각이 들었다.
-다음은 css를 학습할 계획을 가지고 있다. 물론 처음 배우는 파트이다보니 기대반 걱정반이다.
-이를 통해 이쁜 웹 페이지를 만들어 보고 싶다.
-
-2022.12.09 [Chapter 6.01~ 6.04]
-
-css 속성에 대해 공부해 보았다. css 텍스트 색상 폰트 크기 글꼴 등 다양하게 사용해보았고,
-박스 모델 구성 속성도 다뤄 보았지만, 아직 박스 속성에 있는 margin, border,padding이 헷갈려 어려번 차이를 비교해보려한다.
-또한 배경속성도 이를통해 익히게 되었다. 박스모델 구성요소가 헷갈리다보니, 박스를 만들어도 의도와는 다르게 만들어지는 경우가 있다.
-그리고 배경속성이 나에게 있어 가장 어려운 파트였다. 반복 학습을 통해 익히고, 여러번 쳐보며 나의 것으로 만들어야겠다는 생각이 들었다.
-css를 마무리 하여 다음주에 저번에 한 html test에 css를 적용해 한층더 업그레이드할 계획이다.
-
-2022.12.10 [Chapter 6.05~ 6.09]
-
-css의 다양한 효과들에 대해 배우는 시간을 가졌다. 전환 효과, 변환 효과 위치 효과등 다양하게 배우게 되었다.
-책만 봤을때는 이게 도대체 무슨 소리인가 했는데, 유튜브를 통해 책과 함께 공부하며, 따라해보니 이해가 됐다.
-처음엔 html만 다루던 나였지만, 이제 점점 css를 공부하면서 웹 페이지의 뼈대인 html에 css를 적용하니
-변화하고 점차 구조화 되가는 웹페이지를 보는 재미도 있었다.
-하지만, 전환효과와 변환 효과는 공부하면서 어려움을 겪었지만, 재밌게 학습하였다.
-간혹 반대로 되는 경우도 있었고 오류도 뜨는경우가 있었다.
-자세히 살펴보면 나의 실수로 인해 안되는 경우가 많긴 했지만, 그래도 이러한 과정을 통해 점차점차 실수와 css 지식이 늘어나는거 같아 기분이 좋았다.
-
-2022.12.12 [Chapter 7.01~ 7.03]
-
-css의 마지막 챕터인 플렉스박스와 미디어쿼리를 배우는 시간이였다. 플렉스박스를 배우고 난뒤, 그리드를 배울때 비슷한 부분이 맞아서
-학습하는데는 큰 어려움은 없었다 다만, 속성이 다양하다보니 종종 헷갈리는 부분이 있었다.최대한 다양한 값을 적용해보며 차이점을 비교해 보았다.
-배우고 난 뒤 중요한 점은 적용해보는것이라 생각이 든다. 다음에 html test에 적용해보며 복습을 해볼 생각이다.
-첫 실전 css 적용이라 기대반 걱정반인 상태이다. 잘 적용할 수 있을까라는 생각도 들고 적용하면서 점차 꾸미는 재미가 있네라는 생각도 든다.
-css의 마지막인 미디어 쿼리를 이용해 반응형 웹페이지를 배워 이를통해 다양한 플랫폼에서 이용가능한 웹페이지를 만든다는걸 알게되었다.
-재밌는 시간을 가졌고, 다음엔 자바스크립트를 배우며 점차점차 늘어나는것이 보였으면 좋겠다.
-
-2022.12.13 [Chapter 8.01~ 8.02]
-
-오늘은 기존 test에 css를 적용해보는 시간을 가졌다. 막상해보니 점차점차 변하는걸 보니 그 변화에 재미를 느끼게 되었다.
-또한 중간중간 막히는 부분도 있어 배운걸 참조해가며 쓰기도 했다. 다 작성한 후 비교해 보았지만, 많은 부분 나와는 달랐다.
-하지만 다르다는 이유 하나로 코드를 고쳐쓰면 내가 한 코드작성이 의미없어진다 생각이 들어 일단은 놔두었다.
-자바스크립트까지 배우고 난뒤에 수정해도 늦지 않다고 생각이 들었다.
-그후, 자바스크립트를 시작하였다. 시작 초반이라 자바스크립트 실행방법및 확장프로그램등 설정하는 시간을 가졌다.
-이를 통해 자바스크립트도 재밌게 배우는 시간을 가졌으면 좋겠다.
-
-2022.12.14 [Chapter 9.01~ 9.03]
-
-오늘부터 본격적으로 자바스크립트를 학습하였다. 변수와 상수등 배울점이 많았다. 처음 접하는 부분이 많아 대부분 이해하려고 노력하였고
-또한 충분히 따라해보며 익히는 시간을 가졌다. 특히 연산자 파트에서 어려움을 느꼈다. 
-하나씩 하나씩 해보면서 최대한 이해하고 나의것으로 만들어봐야할것 같다. 
-또한 html과 css에 비해 어려움을 느꼈기에 자바스크립트에 좀더 비중을 두고 학습해볼 생각이다.
-배우다보면서 점점 자바스크립트를 이용한 프로그램도 하나 만들어보고싶다는 생각도 들었다.
-자바스크립트 학습을 마치면 꼭 만들어볼것이다.
-
-2022.12.15 [Chapter 9.04~ 9.05]
-
-오늘은 조건문과 반복문을 공부했다.
-사실 지난 학습보다는 좀더 재미있는 시간이였다. 특정조건에 따라 다르게 실행되는 코드를 보니 뭔가 구조적이단 생각이 들었다.
-그만큼 뭔가 자동화느낌도 들어서 코드를 작성하는 시간동안 재미를 느꼈다.
-반복문에서도 무한반복문 오류를 배우면서 무한반복되지 않도록 해야겠다는 생각도 들었다/
-실제로 무한반복문을 실행했더니 vs code가 멈추기도 했다. 물론 바로 중지하여 vs code 자체가 다운되진 않았지만, 재밌는 경험이였다.
-다음엔 함수를 배우게 된다. 함수가 어려운것은 알고 있지만 그렇다고 물러서지 않고 재밌게 해볼 생각이다.
-
-2022.12.16 [Chapter 10.01~ 10.03]
-
-오늘부터 함수를 배우는 날이다. 함수를 배우기 시작하면서 뭔가 진짜 자바스크립트에 대해 알기 시작한것 같다.
-정말 다양하기도 하고 응용성도 방대하여 학습에 있어 복습은 물론 다양한 코드작성을 해봐야할것 같다.
-특히 함수 선언방법이 다양하여 자유자재로 다룰수 있도록 꾸준히 작성을 해보며 연습을 할 예정이다.
-아직 리턴에 대해 정확히 이해하지 못해서 한번더 강의를 들어보며 다시한번 더 학습하려한다.
-함수의 이름답게 어려움이 있었지만 그렇다고해서 두렵진 않았다, 오히려 재미를 느끼는 시간을 가졌다.
-
-2022.12.17 [Chapter 10.04~ 10.05]
-
-함수의 2번째 특징에 대해 알아보았다. 대표적으로 스코프에 대해 알게 되었다.
-일부러 오류로 작성하며 비교하는 날이다보니 주석처리를 한 코드가 몇줄 있다.
-오히려 비교를 해보니 확실히 알게 되었다.
-비교해보면서 어떤 차이가 있는지 또한 뭐때문에 오류가 나는지도 알게 되어서 이를 통해 코드작성에 있어 한층더 성장한 기분을 받았다.
-하지만 즉시 실행 함수는 이해하는데 시간이 좀 걸려 예상컨대 자주 보지 않으면 금방 잊을거 같다는 확신이 들었다.
-완강이후 이런 부분들을 모아 집중적으로 학습하며 좀 더 기본기를 단단하게 다쳐야겠다는 생각이 들었다.
-다가오는 다음주가 완강하는 주간이다. 끝까지 학습하여 완강을 할 계획이다.
-
-2022.12.20 [Chapter 11.01~ 11.02]
-
-오늘은 객체에 대해 배우는 시간을 가졌다. 재밌는 시간이였다. 객체를 지정하고 접근하는 방식이 새롭고 재밌었다
-또한 상황에 따라 객체를 변경 추가 삭제를 할수 있는 그 부분이 특히 재밌었던거 같다.
-그러면서 데이터 관리또한 배우게 되었는데, 글로만 봤을때 이해가 안되던 깊은 복사와 얕은 복사를 코드작성및 강의를 통해 이해할 수 있었다.
-이렇게 한걸음 한걸음 배우며 종강을 향해 나아갈 것이다.
-
-2022.12.21 
-
-오늘은 복습을 하는 날로 잡았다. 자바스크립트를 전반적으로 다시 학습하는 시간을 가졌는데,
-확실히 여러번 봐야할 것 같다. 봐도봐도 새롭고 봐도봐도 처음공부하는 느낌이 든다.
-그래도 다시 읽고 읽다보니 조금씩 기억에 있어 나름대로 학습에 있어 잘해오고 있다는 생각도 들었다.
-물론 완벽하다는 생각은 들지 않지만 이렇게 점차 학습해나가면서 부족한 부분을 채우면 될거라 생각이 들어 꾸준히 학습하고 있다.
-그래도 재미있게 코딩하고 있어 학습에 있어 그리 큰 부담은 없다.
-
-2022.12.22 [Chapter 11.03~ 11.04]
-
-오늘은 표준 내장 객체와 브라우저 객체를 배우는 시간을 가졌다.
-그저 저번에 배운 객체가 전부인 줄 알았지만, 오늘 배우게 되면서 기본적으로 제공하는 객체랑 브라우저에 따라 제공하는 객체가 다르다는걸 알아
-뭔가 또 배우는 시간을 가지게 되어 재미있는 시간이였다. 양이 방대하다는 사실에 조금은 걱정을 했지만, 대표적인것 위주로 학습하다보니
-오히려 재밌는 시간이였다 특히 math 객체가 재미있었다. 난수 반환하는 게 새로웠고 이걸로 랜덤 숫자부여도 가능하다는걸 깨닫고 재밌는 시간을 보냈다.
+Study
